# Kalman-SINDy-Paper

./: .gitignore  .pre-commit-config.yaml  main.bib  main.tex  readme.md
ACCESS_latex_template_20231118/: access.tex
images/: published-requirements.txt
images/gen_image/: .gitignore  composite_plots.py  pyproject.toml  run_exps.sh
images/gen_image/ksindy_figs/: __init__.py  _typing.py  config.py  data.py  plotting.py
images/gen_image/old_trials/: .gitignore
