[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman-sindy-figures"
authors = [
    {name="Jake Stevens-Haas", email="jacob.stevens.haas@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "matplotlib",
    "kalman @ git+https://github.com/Jacob-Stevens-haas/kalman",
    "pysindy-experiments @ git+https://github.com/Jacob-Stevens-Haas/gen-experiments.git@0.1.0",
    "mitosis>=0.4",
]

[tool.setuptools]
packages = ["ksindy_figs"]

[tool.isort]
profile = "black"
