[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "kalman-sindy-figures"
authors = [
    {name="Jake Stevens-Haas", email="jacob.stevens.haas@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.10"
dynamic = ["version"]
dependencies = [
    "matplotlib",
    "kalman @ git+https://github.com/Jacob-Stevens-haas/kalman@0.1.1",
    "pysindy-experiments @ git+https://github.com/Jacob-Stevens-Haas/gen-experiments.git@0fe7f40",
    "mitosis>=0.5.3",
]

[tool.setuptools]
packages = ["ksindy_figs"]

[tool.isort]
profile = "black"

[tool.mitosis.steps]
gridsearch = ["gen_experiments.gridsearch:run", "ksindy_figs.config:lu"]
